--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -121,7 +121,7 @@ prometheus:
   serviceAccount: prometheus
 
   image: prom/prometheus:v2.15.2
-  imagePullPolicy: Always
+  imagePullPolicy: IfNotPresent
 
   nodeSelector: {}
 
