Revert "fix(helm): ignore entire webhook-configuration if certManager not enabled (#366)"
This reverts commit 3acc6531ca17285f38c43eaf648ba6143b279224.

--- a/helm/chaos-mesh/templates/webhook-configuration.yaml
+++ b/helm/chaos-mesh/templates/webhook-configuration.yaml
@@ -1,4 +1,3 @@
-{{- if .Values.webhook.certManager.enabled }}
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
@@ -10,8 +9,10 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/component: admission-webhook
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
+  {{- if .Values.webhook.certManager.enabled }}
   annotations:
     cert-manager.io/inject-ca-from: {{ printf "%s/%s" .Release.Namespace "chaos-mesh-cert" | quote }}
+  {{- end }}
 webhooks:
   - name: {{ template "chaos-mesh.webhook" . }}
     clientConfig:
@@ -61,8 +62,10 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/component: admission-webhook
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+"  "_" }}
+  {{- if .Values.webhook.certManager.enabled }}
   annotations:
     cert-manager.io/inject-ca-from: {{ printf "%s/%s" .Release.Namespace "chaos-mesh-cert" | quote }}
+  {{- end }}
 webhooks:
   {{- range $crd := .Values.webhook.CRDS }}
   - clientConfig:
@@ -85,6 +88,7 @@ webhooks:
           - {{ $crd }}
   {{- end }}
 
+{{- if .Values.webhook.certManager.enabled }}
 ---
 apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
