--- a/images/chaos-kernel/Dockerfile
+++ b/images/chaos-kernel/Dockerfile
@@ -2,20 +2,21 @@ FROM ubuntu:bionic
 
 ARG HTTPS_PROXY
 ARG HTTP_PROXY
+ARG MAKE_JOBS
 
 RUN apt update && apt install -y ca-certificates gnupg2
 
 RUN echo "deb https://mirrors.aliyun.com/ubuntu/ bionic main restricted universe multiverse\n"\
-"deb https://mirrors.aliyun.com/ubuntu/ bionic-security main restricted universe multiverse\n"\
-"deb https://mirrors.aliyun.com/ubuntu/ bionic-updates main restricted universe multiverse\n"\
-"deb https://mirrors.aliyun.com/ubuntu/ bionic-proposed main restricted universe multiverse\n"\
-"deb https://mirrors.aliyun.com/ubuntu/ bionic-backports main restricted universe multiverse\n"\
-"deb-src https://mirrors.aliyun.com/ubuntu/ bionic main restricted universe multiverse\n"\
-"deb-src https://mirrors.aliyun.com/ubuntu/ bionic-security main restricted universe multiverse\n"\
-"deb-src https://mirrors.aliyun.com/ubuntu/ bionic-updates main restricted universe multiverse\n"\
-"deb-src https://mirrors.aliyun.com/ubuntu/ bionic-proposed main restricted universe multiverse\n"\
-"deb-src https://mirrors.aliyun.com/ubuntu/ bionic-backports main restricted universe multiverse\n"\
-"deb https://apt.kitware.com/ubuntu/ bionic main" > /etc/apt/sources.list
+    "deb https://mirrors.aliyun.com/ubuntu/ bionic-security main restricted universe multiverse\n"\
+    "deb https://mirrors.aliyun.com/ubuntu/ bionic-updates main restricted universe multiverse\n"\
+    "deb https://mirrors.aliyun.com/ubuntu/ bionic-proposed main restricted universe multiverse\n"\
+    "deb https://mirrors.aliyun.com/ubuntu/ bionic-backports main restricted universe multiverse\n"\
+    "deb-src https://mirrors.aliyun.com/ubuntu/ bionic main restricted universe multiverse\n"\
+    "deb-src https://mirrors.aliyun.com/ubuntu/ bionic-security main restricted universe multiverse\n"\
+    "deb-src https://mirrors.aliyun.com/ubuntu/ bionic-updates main restricted universe multiverse\n"\
+    "deb-src https://mirrors.aliyun.com/ubuntu/ bionic-proposed main restricted universe multiverse\n"\
+    "deb-src https://mirrors.aliyun.com/ubuntu/ bionic-backports main restricted universe multiverse\n"\
+    "deb https://apt.kitware.com/ubuntu/ bionic main" > /etc/apt/sources.list
 
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 8611B7A28669BB93
 
@@ -32,7 +33,7 @@ RUN update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-8 80
 
 RUN git clone https://github.com/iovisor/bcc.git
 WORKDIR /bcc/build
-RUN cmake .. -DCMAKE_INSTALL_PREFIX=/usr && make -j && make install
+RUN cmake .. -DCMAKE_INSTALL_PREFIX=/usr && make -j${MAKE_JOBS} && make install
 
 WORKDIR /
 
