build dashboard-server-frontend in docker

--- a/images/chaos-dashboard/Dockerfile
+++ b/images/chaos-dashboard/Dockerfile
@@ -1,3 +1,10 @@
+FROM mhart/alpine-node:13.11.0 as node
+
+RUN mkdir /src
+WORKDIR /src
+COPY . .
+RUN yarn install; yarn build
+
 FROM alpine:3.10
 
 ARG HTTPS_PROXY
@@ -5,6 +12,6 @@ ARG HTTP_PROXY
 
 RUN apk add tzdata --no-cache
 
-COPY build /web
+COPY --from=node /src/build /web
 
 COPY --from=pingcap/binary /src/bin/chaos-dashboard /usr/local/bin/chaos-dashboard
