--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -55,10 +55,16 @@ spec:
                   type: integer
                 minburst:
                   description: Minburst specifies the size of the peakrate bucket.
+                    For perfect accuracy, should be set to the MTU of the interface.  If
+                    a peakrate is needed, but some burstiness is acceptable, this
+                    size can be raised. A 3000 byte minburst allows around 3mbit/s
+                    of peakrate, given 1000 byte packets.
                   format: int32
                   type: integer
                 peakrate:
                   description: Peakrate is the maximum depletion rate of the bucket.
+                    The peakrate does not need to be set, it is only necessary if
+                    perfect millisecond timescale shaping is required.
                   format: int64
                   type: integer
                 rate:
