clean pidfile in init.sh
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/examples/chaosfs-configmap/pd-configmap.yaml
+++ b/examples/chaosfs-configmap/pd-configmap.yaml
@@ -16,7 +16,7 @@ data:
     - name: inject-scripts
       image: pingcap/chaos-scripts:latest
       imagePullpolicy: Always
-      command: ["sh", "-c", "/scripts/init.sh -d /var/lib/pd/data -f /var/lib/pd/fuse-data"]
+      command: ["sh", "-c", "/scripts/init.sh -d /var/lib/pd/data -f /var/lib/pd/fuse-data -p /tmp/fuse/pid"]
     containers:
     - name: chaosfs
       image: pingcap/chaos-fs:latest
