--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -92,6 +92,9 @@ spec:
               description: Path defines the path of files for injecting I/O chaos
                 action.
               type: string
+            paused:
+              description: If this chaos is paused
+              type: boolean
             percent:
               description: 'Percent defines the percentage of injection errors and
                 provides a number from 0-100. default: 100.'
