--- a/config/crd/bases/pingcap.com_kernelchaos.yaml
+++ b/config/crd/bases/pingcap.com_kernelchaos.yaml
@@ -112,6 +112,9 @@ spec:
               description: Next time when this action will be applied again
               format: date-time
               type: string
+            paused:
+              description: If this chaos is paused
+              type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about time.
