--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -68,6 +68,7 @@ spec:
               format: date-time
               type: string
             paused:
+              description: If this chaos is paused
               type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
