--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -90,6 +90,9 @@ spec:
               description: Path defines the path of files for injecting I/O chaos
                 action.
               type: string
+            paused:
+              description: If this chaos is paused
+              type: boolean
             percent:
               description: 'Percent defines the percentage of injection errors and
                 provides a number from 0-100. default: 100.'
@@ -359,6 +362,9 @@ spec:
               description: Next time when this action will be applied again
               format: date-time
               type: string
+            paused:
+              description: If this chaos is paused
+              type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about time.
@@ -667,6 +673,9 @@ spec:
               description: Next time when this action will be applied again
               format: date-time
               type: string
+            paused:
+              description: If this chaos is paused
+              type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about network.
@@ -964,6 +973,7 @@ spec:
               format: date-time
               type: string
             paused:
+              description: If this chaos is paused
               type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
@@ -1182,6 +1192,9 @@ spec:
               description: Next time when this action will be applied again
               format: date-time
               type: string
+            paused:
+              description: If this chaos is paused
+              type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about time.
