Move `paused` field to status

--- a/examples/pause-patch.yaml
+++ b/examples/pause-patch.yaml
@@ -1,5 +1,5 @@
 # todo: remove this file after fully implemented
-spec:
+#spec:
+#  paused: false
+status:
   paused: true
-#status:
-#  paused: true
