--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -603,12 +603,14 @@ spec:
                     size can be raised. A 3000 byte minburst allows around 3mbit/s
                     of peakrate, given 1000 byte packets.
                   format: int32
+                  minimum: 0
                   type: integer
                 peakrate:
                   description: Peakrate is the maximum depletion rate of the bucket.
                     The peakrate does not need to be set, it is only necessary if
                     perfect millisecond timescale shaping is required.
                   format: int64
+                  minimum: 0
                   type: integer
                 rate:
                   description: Rate is the speed knob. Allows bps, kbps, mbps, gbps,
