--- a/config/crd/bases/pingcap.com_podchaos.yaml
+++ b/config/crd/bases/pingcap.com_podchaos.yaml
@@ -141,9 +141,9 @@ spec:
               description: Value is required when the mode is set to `FixedPodMode`
                 / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
-                provide a number from 0-100 to specify the max % of pods the server
+                provide a number from 0-100 to specify the percent of pods the server
                 can do chaos action. IF `RandomMaxPercentPodMod`,  provide a number
-                from 0-100 to specify the % of pods to do chaos action
+                from 0-100 to specify the max percent of pods to do chaos action
               type: string
           required:
           - action
