--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -579,6 +579,7 @@ spec:
               - duplicate
               - corrupt
               - partition
+              - bandwidth
               type: string
             bandwidth:
               description: Bandwidth represents the detail about bandwidth control
@@ -664,6 +665,7 @@ spec:
               - to
               - from
               - both
+              - ""
               type: string
             duplicate:
               description: DuplicateSpec represents the detail about loss action
@@ -789,6 +791,7 @@ spec:
                   - fixed
                   - fixed-percent
                   - random-max-percent
+                  - ""
                   type: string
                 selector:
                   description: TargetSelector defines the partition target selector
