--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -292,9 +292,10 @@ spec:
                   description: TargetValue is required when the mode is set to `FixedPodMode`
                     / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
                     provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
-                    provide a number from 0-100 to specify the max % of pods the server
-                    can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
-                    from 0-100 to specify the % of pods to do chaos action
+                    provide a number from 0-100 to specify the percent of pods the
+                    server can do chaos action. If `RandomMaxPercentPodMod`,  provide
+                    a number from 0-100 to specify the max percent of pods to do chaos
+                    action
                   type: string
               required:
               - mode
@@ -304,9 +305,9 @@ spec:
               description: Value is required when the mode is set to `FixedPodMode`
                 / `FixedPercentPodMod` / `RandomMaxPercentPodMod`. If `FixedPodMode`,
                 provide an integer of pods to do chaos action. If `FixedPercentPodMod`,
-                provide a number from 0-100 to specify the max % of pods the server
+                provide a number from 0-100 to specify the percent of pods the server
                 can do chaos action. If `RandomMaxPercentPodMod`,  provide a number
-                from 0-100 to specify the % of pods to do chaos action
+                from 0-100 to specify the max percent of pods to do chaos action
               type: string
           required:
           - action
