--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -37,6 +37,10 @@ spec:
             action:
               description: 'Action defines the specific pod chaos action. Supported
                 action: delay / errno / mixed Default action: delay'
+              enum:
+              - delay
+              - errno
+              - mixed
               type: string
             addr:
               description: Addr defines the address for sidecar container.
@@ -69,6 +73,8 @@ spec:
             layer:
               description: 'Layer represents the layer of the I/O action. Supported
                 value: fs. Default layer: fs'
+              enum:
+              - fs
               type: string
             methods:
               description: 'Methods defines the I/O methods for injecting I/O chaos
@@ -79,6 +85,12 @@ spec:
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
+              enum:
+              - one
+              - all
+              - fixed
+              - fixed-percent
+              - random-max-percent
               type: string
             nextRecover:
               description: Next time when this action will be recovered.
