fix error on kubernetes 1.18
Signed-off-by: Yang Keao <keao.yang@yahoo.com>

--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -59,6 +59,12 @@ rules:
 - apiGroups: ["certificates.k8s.io"]
   resources: ["certificatesigningrequests", "certificatesigningrequests/approval"]
   verbs: ["get", "delete", "create", "update"]
+- apiGroups: ["certificates.k8s.io"]
+  resources:
+    - "signers"
+  resourceNames:
+    - "kubernetes.io/legacy-unknown"
+  verbs: ["approve"]
 - apiGroups: [""]
   resources: ["secrets"]
   verbs: ["get", "create", "list", "watch", "update", "delete"]
