--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -126,7 +126,8 @@ spec:
               - latency
               type: object
             direction:
-              description: Direction represents the partition direction
+              description: Direction represents the direction, this applies on netem
+                and network partition action
               enum:
               - to
               - from
@@ -250,10 +251,11 @@ spec:
                   type: object
               type: object
             target:
-              description: Target represents network partition target
+              description: Target represents network target, this applies on netem
+                and network partition action
               properties:
                 mode:
-                  description: TargetMode defines the partition target selector mode
+                  description: TargetMode defines the target selector mode
                   enum:
                   - one
                   - all
@@ -263,7 +265,7 @@ spec:
                   - ""
                   type: string
                 selector:
-                  description: TargetSelector defines the partition target selector
+                  description: TargetSelector defines the target selector
                   properties:
                     annotationSelectors:
                       additionalProperties:
