--- a/config/crd/bases/pingcap.com_networkchaos.yaml
+++ b/config/crd/bases/pingcap.com_networkchaos.yaml
@@ -176,6 +176,9 @@ spec:
               description: Next time when this action will be applied again
               format: date-time
               type: string
+            paused:
+              description: If this chaos has been paused
+              type: boolean
             scheduler:
               description: Scheduler defines some schedule rules to control the running
                 time of the chaos experiment about network.
